--- a/introduction.ja.html
+++ b/introduction.ja.html
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="iso-2022-jp"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html>
-<head profile="http://suika.fam.cx/~wakaba/lang/rfc/translation/html-profile">
+<head profile="https://suika.suikawiki.org/~wakaba/lang/rfc/translation/html-profile">
 <meta http-equiv="Content-Style-Type" content="text/css"/>
 <title>RFC の和訳</title>
-<link rel="stylesheet" href="http://suika.fam.cx/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
+<link rel="stylesheet" href="https://suika.suikawiki.org/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
 <link rev="translate" href="#rfc-translators-note"/>
 <meta name="author" content="わかば, "/>
 </head>
@@ -110,9 +110,9 @@
 <a href="news://suika.fam.cx/suika.markup" title="URI: &lt;news://suika.fam.cx/suika.markup>" class="rfc-eref">ニュース組 suika.markup</a>
 </li>
   <li>
-<a href="http://suika.fam.cx/~wakaba/-temp/wiki/wiki?RFC%A4%CE%CF%C2%CC%F5%A4%CB%A4%C4%A4%A4%A4%C6%A4%DE%A4%BF%A1%BC%A4%EA" title="URI: &lt;http://suika.fam.cx/~wakaba/-temp/wiki/wiki?RFC%A4%CE%CF%C2%CC%F5%A4%CB%A4%C4%A4%A4%A4%C6%A4%DE%A4%BF%A1%BC%A4%EA>" class="rfc-eref">RFC
+<a href="https://suika.suikawiki.org/~wakaba/-temp/wiki/wiki?RFC%A4%CE%CF%C2%CC%F5%A4%CB%A4%C4%A4%A4%A4%C6%A4%DE%A4%BF%A1%BC%A4%EA" title="URI: &lt;https://suika.suikawiki.org/~wakaba/-temp/wiki/wiki?RFC%A4%CE%CF%C2%CC%F5%A4%CB%A4%C4%A4%A4%A4%C6%A4%DE%A4%BF%A1%BC%A4%EA>" class="rfc-eref">RFC
   の和訳についてまたーり</a>
-  (<a href="http://suika.fam.cx/~wakaba/-temp/wiki/wiki" title="URI: &lt;http://suika.fam.cx/~wakaba/-temp/wiki/wiki>" class="rfc-eref">SuikaWiki</a>)</li>
+  (<a href="https://suika.suikawiki.org/~wakaba/-temp/wiki/wiki" title="URI: &lt;https://suika.suikawiki.org/~wakaba/-temp/wiki/wiki>" class="rfc-eref">SuikaWiki</a>)</li>
   </ul>
 </div>
 
@@ -147,11 +147,11 @@
     <dt id="RFC2629">[RFC2629]</dt>
 <dd>『<cite>Writing I-Ds and RFCs using XML</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>XML を使って I-D や RFC を書く</cite>』</span>
-</span>, <span title="@fullname">Rose, M.T.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629>">RFC 2629</a>。</dd>
+</span>, <span title="@fullname">Rose, M.T.</span>, <a href="https://suika.suikawiki.org/uri-res/N2L?urn:ietf:rfc:2629" title="URI: &lt;https://suika.suikawiki.org/uri-res/N2L?urn:ietf:rfc:2629>">RFC 2629</a>。</dd>
     
     <dt id="XRFCTML">[XRFCTML]</dt>
 <dd>『<cite>
-<a href="http://suika.fam.cx/~wakaba/lang/rfc/translation/" title="URI: &lt;http://suika.fam.cx/~wakaba/lang/rfc/translation/>">拡張可能な RFC の翻訳マーク付け言語</a>
+<a href="https://suika.suikawiki.org/~wakaba/lang/rfc/translation/" title="URI: &lt;https://suika.suikawiki.org/~wakaba/lang/rfc/translation/>">拡張可能な RFC の翻訳マーク付け言語</a>
 </cite>』。<span class="t-add-info">Work in progress:-)</span>
 </dd>
     
@@ -169,22 +169,22 @@
 <ul class="rfc-author">
 <li class="rfc-author-fullname">わかば</li>
 <li class="rfc-organization">西瓜計画</li>
-<li class="rfc-email">電子メイル: &lt;<a href="mailto:w@suika.fam.cx">w@suika.fam.cx</a>&gt;</li>
-<li class="rfc-uri">URI: &lt;<a href="http://suika.fam.cx">http://suika.fam.cx</a>&gt;</li>
+<li class="rfc-email">電子メイル: &lt;<a href="mailto:wakaba@suikawiki.org">wakaba@suikawiki.org</a>&gt;</li>
+<li class="rfc-uri">URI: &lt;<a href="https://suika.suikawiki.org">https://suika.suikawiki.org</a>&gt;</li>
 </ul>
 </div>
 <ins id="rfc-translators-note" class="t-note t-l-ja" xml:lang="ja">
 <div class="rfc-section" id="t-change">
 <h1>翻訳の変更履歴</h1>
 <dl>
-<dt>2002-06-12 <a href="mailto:w@suika.fam.cx" title="電子メイル: &lt;w@suika.fam.cx>">わかば</a>
+<dt>2002-06-12 <a href="mailto:wakaba@suikawiki.org" title="電子メイル: &lt;wakaba@suikawiki.org>">わかば</a>
 </dt>
 <dd>
 <ul>
 <li>新規作成。</li>
 </ul>
 </dd>
-<dt>2002-09-01 <a href="mailto:w@suika.fam.cx" title="電子メイル: &lt;w@suika.fam.cx>">わかば</a>
+<dt>2002-09-01 <a href="mailto:wakaba@suikawiki.org" title="電子メイル: &lt;wakaba@suikawiki.org>">わかば</a>
 </dt>
 <dd>
 <ul>
