--- a/rfc0799-ja.html
+++ b/rfc0799-ja.html
@@ -7,8 +7,8 @@
       RFC 799: 
     Internet 名前ドメイン (Internet Name Domains)
     </title>
-<link rel="stylesheet" href="http://suika.fam.cx/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
-<link rel="alternate" href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:799" hreflang="en" title="RFC 799"/>
+<link rel="stylesheet" href="/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
+<link rel="alternate" href="/uri-res/N2L?urn:ietf:rfc:799" hreflang="en" title="RFC 799"/>
 <link rev="made" href="http://www.rfceditor.org/" title="RFC Editor"/>
 <link rev="translate" href="#rfc-translators-note"/>
 <meta name="author" content="D. L. Mills, "/>
@@ -588,11 +588,11 @@ like .<var xmlns="http://www.w3.org/1999/xhtml">&lt;host&gt;</var>@<var xmlns="h
 described above.
     </p>
 <p xml:lang="ja" class="t-l-ja">
-      <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:780" title="RFC 780">RFC 780</a> モデルでは、経路は MRCP 命令の受信者経路欄と
+      <a href="/uri-res/N2L?urn:ietf:rfc:780" title="RFC 780">RFC 780</a> モデルでは、経路は MRCP 命令の受信者経路欄と
 MAIL 命令の送信者経路欄に指定できます。実際は、
 受信者経路も送信者経路も、発信者が標準 internet メイル箱命を
 指定していれば必要ありません。経路が使われている場合に
-ドメイン名のみで成っている限りにおいては、現行の <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:780" title="RFC 780">RFC 780</a>
+ドメイン名のみで成っている限りにおいては、現行の <a href="/uri-res/N2L?urn:ietf:rfc:780" title="RFC 780">RFC 780</a>
 仕様とは衝突しません。何らかの理由で転送が他のホストを経て
 行われた場合は、 <samp>.<var xmlns="http://www.w3.org/1999/xhtml">&lt;host&gt;</var>@<var xmlns="http://www.w3.org/1999/xhtml">&lt;domain&gt;</var>
 </samp> のような完全で曖昧でない構文が、
@@ -617,7 +617,7 @@ in the recipient-route as received as the new first entry in the
 sender-route.
     </p>
 <p xml:lang="ja" class="t-l-ja">
-      現行の <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:780" title="RFC 780">RFC 780</a> の仕様では、受信者が送信者の名前を組み立て、
+      現行の <a href="/uri-res/N2L?urn:ietf:rfc:780" title="RFC 780">RFC 780</a> の仕様では、受信者が送信者の名前を組み立て、
 送信者経路の始めにこれを挿入する必要があります。おそらく、
 この名前を組み立てる唯一の情報は送信者の internet  address でしょう。
 上の例のように、複数のドメインが特定ホストの単一サーバーで
@@ -651,11 +651,11 @@ the local mail system.  This avoids the problems mentioned above and
 simplifies reply functions.
     </p>
 <p xml:lang="ja" class="t-l-ja">
-      <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:733" title="RFC 733">RFC 733</a>
+      <a href="/uri-res/N2L?urn:ietf:rfc:733" title="RFC 733">RFC 733</a>
       頭を編集することは避けるように最大限の努力を払うべきでしょう。
 なぜなら、これは広範囲の分析を要する侵略的処理だからです。
 新たに開発されるメイル処理系は、標準 internet メイル箱構文に
-注意を払い、 <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:733" title="RFC 733">RFC 733</a> と <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:780" title="RFC 780">RFC 780</a> の欄のどこにおいても
+注意を払い、 <a href="/uri-res/N2L?urn:ietf:rfc:733" title="RFC 733">RFC 733</a> と <a href="/uri-res/N2L?urn:ietf:rfc:780" title="RFC 780">RFC 780</a> の欄のどこにおいても
 これを使うことを確実にすることが期待されます。
 これが可能でない場合、例えば多くの現在の ARPANET ホストでは、
 必要な編集を局地メイル処理系から internet メイル処理系へ
@@ -728,7 +728,7 @@ it.
 <dd>
 <ul>
 <li>
-<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
+<a href="/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
 </ul>
 </dd>
 </dl>
