--- a/rfc1796-ja.html
+++ b/rfc1796-ja.html
@@ -7,7 +7,7 @@
       RFC 1796: 
     全ての RFC が標準には非ず (Not All RFCs are Standards)
     </title>
-<link rel="stylesheet" href="http://suika.fam.cx/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
+<link rel="stylesheet" href="/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
 </head>
 <body>
 <div id="rfc--table">
@@ -135,7 +135,7 @@
     (原案標準), Internet Standard (Internet 標準)), Historic (歴史的)
     を有しています。この位置付けは RFC 自身の最初の頁に書いてありますし、定期的に発行される
     『Internet Official Protocols Standards』 (Internet 
-    公式プロトコル標準) RFC (<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:1" title="STD 1">STD 1</a>)
+    公式プロトコル標準) RFC (<a href="/uri-res/N2L?urn:ietf:std:1" title="STD 1">STD 1</a>)
     にも書かれています。しかしこの位置付けは時々引用や参照から省かれるので、混乱を招き兼ねません。
   </p>
 </div>
@@ -434,7 +434,7 @@
 <dd>
 <ul>
 <li>
-<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
+<a href="/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
 <li>翻訳完了。</li>
 </ul>
 </dd>
