--- a/rfc1873-ja.html
+++ b/rfc1873-ja.html
@@ -7,8 +7,8 @@
       RFC 1873: 
     Message/External-Body Content-ID 接続型 (Message/External-Body Content-ID Access Type)
     </title>
-<link rel="stylesheet" href="http://suika.fam.cx/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
-<link rel="alternate" href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1873" hreflang="en" title="RFC 1873"/>
+<link rel="stylesheet" href="/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
+<link rel="alternate" href="/uri-res/N2L?urn:ietf:rfc:1873" hreflang="en" title="RFC 1873"/>
 <link rev="made" href="http://www.rfceditor.org/" title="RFC Editor"/>
 <link rev="translate" href="#rfc-translators-note"/>
 <meta name="author" content="Edward Levinson, James Clark, "/>
@@ -453,7 +453,7 @@ MIME 実体</span>は安全性に関係するかもしれません。
 <dd>『<cite>Standard for the format of ARPA Internet text messages</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>ARPA Internet 
       テキストメッセージの書式の標準</cite>』</span>
-</span>, <span title="@fullname">Crocker, D.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:11" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:11>">STD 11</a>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:822" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:822>">RFC 822</a>。</dd>
+</span>, <span title="@fullname">Crocker, D.</span>, <a href="/uri-res/N2L?urn:ietf:std:11" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:11>">STD 11</a>, <a href="/uri-res/N2L?urn:ietf:rfc:822" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:822>">RFC 822</a>。</dd>
   
   <dt id="SGML">[SGML]</dt>
 <dd>『<cite>Information processing ―― Text and office systems
@@ -475,7 +475,7 @@ MIME 実体</span>は安全性に関係するかもしれません。
       of Internet Message Bodies</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>MIME (多目的 Internet メイル拡張) 
       第1部: Internet メッセージ本文の書式の指定説明機構</cite>』</span>
-</span>, <span title="@fullname">Borenstein, N.</span>, <span title="@fullname">Freed, N.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1521" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1521>">RFC 1521</a>。</dd>
+</span>, <span title="@fullname">Borenstein, N.</span>, <span title="@fullname">Freed, N.</span>, <a href="/uri-res/N2L?urn:ietf:rfc:1521" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1521>">RFC 1521</a>。</dd>
 </dl>
 </div>
 <div id="rfc-authors" class="rfc-section">
@@ -508,7 +508,7 @@ MIME 実体</span>は安全性に関係するかもしれません。
 <h1 xmlns="http://www.w3.org/1999/xhtml">Content-ID の指定</h1>
 </div>
     <p class="rfc-t" id="rfc.section.1.p.1" xmlns="http://www.w3.org/1999/xhtml">MIME <a href="#MIME" title="MIME (多目的 Internet メイル拡張) 第1部: Internet メッセージ本文の書式の指定説明機構" xmlns="">[MIME]</a> の規定と照らし合わせると、
-    <a href="http://suika.fam.cx/~wakaba/-temp/wiki/wiki?message%2Fexternal%2Dbody%C7%DE%C2%CE%B7%BF" title="URI: &lt;http://suika.fam.cx/~wakaba/-temp/wiki/wiki?message%2Fexternal%2Dbody%C7%DE%C2%CE%B7%BF>" class="rfc-eref" xmlns="">どこに 
+    <a href="/~wakaba/-temp/wiki/wiki?message%2Fexternal%2Dbody%C7%DE%C2%CE%B7%BF" title="URI: &lt;http://suika.fam.cx/~wakaba/-temp/wiki/wiki?message%2Fexternal%2Dbody%C7%DE%C2%CE%B7%BF>" class="rfc-eref" xmlns="">どこに 
     Content-ID: 欄を書くのかについて疑問があります</a>。</p>
   </div>
 <div class="rfc-section">
@@ -535,7 +535,7 @@ MIME 実体</span>は安全性に関係するかもしれません。
 <dd>
 <ul>
 <li>
-<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
+<a href="/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
 </ul>
 </dd>
 </dl>
