--- a/rfc2053-ja.html
+++ b/rfc2053-ja.html
@@ -7,8 +7,8 @@
       RFC 2053: 
     AM (アルメニア) ドメイン (The AM (Armenia) Domain)
     </title>
-<link rel="stylesheet" href="http://suika.fam.cx/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
-<link rel="alternate" href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2053" hreflang="en" title="RFC 2053"/>
+<link rel="stylesheet" href="/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
+<link rel="alternate" href="/uri-res/N2L?urn:ietf:rfc:2053" hreflang="en" title="RFC 2053"/>
 <link rev="made" href="http://www.rfceditor.org/" title="RFC Editor"/>
 <link rev="translate" href="#rfc-translators-note"/>
 <meta name="author" content="Edgar Der-Danieliantz, "/>
@@ -278,21 +278,21 @@
   <dt id="RFC1032">[1]</dt>
 <dd>『<cite>Domain Administrators Guide</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>ドメイン管理者の手引き</cite>』</span>
-</span>, <span title="@fullname">Stahl, M.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1032" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1032>">RFC 1032</a>。</dd>
+</span>, <span title="@fullname">Stahl, M.</span>, <a href="/uri-res/N2L?urn:ietf:rfc:1032" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1032>">RFC 1032</a>。</dd>
   <dt id="RFC1033">[2]</dt>
 <dd>『<cite>Domain Administrators Operations Guide</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>ドメイン管理者の運営の手引き</cite>』</span>
-</span>, <span title="@fullname">Lottor, M.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1033" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1033>">RFC 1033</a>。</dd>
+</span>, <span title="@fullname">Lottor, M.</span>, <a href="/uri-res/N2L?urn:ietf:rfc:1033" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1033>">RFC 1033</a>。</dd>
   <dt id="RFC1034">[3]</dt>
 <dd>『<cite>Domain Names ― Concepts and Facilities</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>
 <a href="http://selene.ok.mei.titech.ac.jp/docs/studies/rfc1034jp.txt" title="URI: &lt;http://selene.ok.mei.titech.ac.jp/docs/studies/rfc1034jp.txt>">ドメイン名―概念と機能</a>
 </cite>』</span>
-</span>, <span title="@fullname">Mockapetris, P.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13>">STD 13</a>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1034" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1034>">RFC 1034</a>。</dd>
+</span>, <span title="@fullname">Mockapetris, P.</span>, <a href="/uri-res/N2L?urn:ietf:std:13" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13>">STD 13</a>, <a href="/uri-res/N2L?urn:ietf:rfc:1034" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1034>">RFC 1034</a>。</dd>
   <dt id="RFC1035">[4]</dt>
 <dd>『<cite>Domain Names ― Implementation and Specification</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>ドメイン名―実装と仕様</cite>』</span>
-</span>, <span title="@fullname">Mockapetris, P.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13>">STD 13</a>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1035" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1035>">RFC 1035</a>。</dd>
+</span>, <span title="@fullname">Mockapetris, P.</span>, <a href="/uri-res/N2L?urn:ietf:std:13" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13>">STD 13</a>, <a href="/uri-res/N2L?urn:ietf:rfc:1035" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1035>">RFC 1035</a>。</dd>
   <dt id="">[5]</dt>
 <dd>『<cite>Name Server Operations Guide for Bind, Release 4.3</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>Bind 用名前サーバー運営の手引き</cite>』</span>
@@ -301,13 +301,13 @@
   <dt id="RFC0974">[6]</dt>
 <dd>『<cite>Mail Routing and the Domain Name System</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>メイル経路制御とドメイン名系統</cite>』</span>
-</span>, <span title="@fullname">Partridge, C.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:14" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:14>">STD 14</a>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:974" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:974>">RFC 974</a>。</dd>
+</span>, <span title="@fullname">Partridge, C.</span>, <a href="/uri-res/N2L?urn:ietf:std:14" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:14>">STD 14</a>, <a href="/uri-res/N2L?urn:ietf:rfc:974" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:974>">RFC 974</a>。</dd>
   <dt id="">[7]</dt>
 <dd>『<cite>DNS and Bind Help for UNIX System Administrators</cite>』, Albitz, P., Liu, C., O'Reilly and Associates, Inc.。</dd>
   <dt id="RFC1700">[8]</dt>
 <dd>『<cite>Assigned Numbers</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>割当番号</cite>』</span>
-</span>, <span title="@fullname">Reynolds, J.</span>, <span title="@fullname">Postel, J.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:2" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:2>">STD 2</a>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700>">RFC 1700</a>。</dd>
+</span>, <span title="@fullname">Reynolds, J.</span>, <span title="@fullname">Postel, J.</span>, <a href="/uri-res/N2L?urn:ietf:std:2" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:2>">STD 2</a>, <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700>">RFC 1700</a>。</dd>
 </dl>
 </div>
 <div class="rfc-section">
@@ -356,7 +356,7 @@
 <dd>
 <ul>
 <li>
-<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
+<a href="/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
 </ul>
 </dd>
 </dl>
