--- a/rfc2606-ja.html
+++ b/rfc2606-ja.html
@@ -7,8 +7,8 @@
       RFC 2606: 
     最上位 DNS 名の予約 (Reserved Top Level DNS Names)
     </title>
-<link rel="stylesheet" href="http://suika.fam.cx/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
-<link rel="alternate" href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2606" hreflang="en" title="RFC 2606"/>
+<link rel="stylesheet" href="/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
+<link rel="alternate" href="/uri-res/N2L?urn:ietf:rfc:2606" hreflang="en" title="RFC 2606"/>
 <link rev="made" href="http://www.rfceditor.org/" title="RFC Editor"/>
 <link rev="translate" href="#rfc-translators-note"/>
 <meta name="author" content="Donald E. Eastlake 3rd, Aliza R. Panitz, "/>
@@ -395,15 +395,15 @@ DNS 関連コードの私的な実験や文書内での例示, DNS 関連実験,
 <span xml:lang="ja" class="t-l-ja">, 『<cite>
 <a href="http://selene.ok.mei.titech.ac.jp/docs/studies/rfc1034jp.txt" title="URI: &lt;http://selene.ok.mei.titech.ac.jp/docs/studies/rfc1034jp.txt>">ドメイン名―概念と機能</a>
 </cite>』</span>
-</span>, <span title="@fullname">Mockapetris, P.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13>">STD 13</a>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1034" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1034>">RFC 1034</a>。</dd>
+</span>, <span title="@fullname">Mockapetris, P.</span>, <a href="/uri-res/N2L?urn:ietf:std:13" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13>">STD 13</a>, <a href="/uri-res/N2L?urn:ietf:rfc:1034" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1034>">RFC 1034</a>。</dd>
   <dt id="RFC1035">[RFC 1035]</dt>
 <dd>『<cite>Domain Names ― Implementation and Specification</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>ドメイン名―実装と仕様</cite>』</span>
-</span>, <span title="@fullname">Mockapetris, P.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13>">STD 13</a>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1035" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1035>">RFC 1035</a>。</dd>
+</span>, <span title="@fullname">Mockapetris, P.</span>, <a href="/uri-res/N2L?urn:ietf:std:13" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:std:13>">STD 13</a>, <a href="/uri-res/N2L?urn:ietf:rfc:1035" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1035>">RFC 1035</a>。</dd>
   <dt id="RFC1591">[RFC 1591]</dt>
 <dd>『<cite>Domain Name System Structure and Delegation</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>ドメイン名ドメイン名系統構造と委任</cite>』</span>
-</span>, <span title="@fullname">Postel, J.</span>, <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1591" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1591>">RFC 1591</a>。</dd>
+</span>, <span title="@fullname">Postel, J.</span>, <a href="/uri-res/N2L?urn:ietf:rfc:1591" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1591>">RFC 1591</a>。</dd>
 </dl>
 </div>
 <div id="rfc-authors" class="rfc-section">
@@ -588,7 +588,7 @@ DNS 関連コードの私的な実験や文書内での例示, DNS 関連実験,
 <dd>
 <ul>
 <li>
-<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
+<a href="/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
 </ul>
 </dd>
 </dl>
