--- a/rfc2659-ja.html
+++ b/rfc2659-ja.html
@@ -7,8 +7,8 @@
       RFC 2659: 
     HTMLの安全性拡張 (Security Extensions For HTML)
     </title>
-<link rel="stylesheet" href="http://suika.fam.cx/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
-<link rel="alternate" href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2659" hreflang="en" title="RFC 2659"/>
+<link rel="stylesheet" href="/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
+<link rel="alternate" href="/uri-res/N2L?urn:ietf:rfc:2659" hreflang="en" title="RFC 2659"/>
 <link rev="made" href="http://www.rfceditor.org/" title="RFC Editor"/>
 <link rev="translate" href="#rfc-translators-note"/>
 <meta name="author" content="Eric Rescorla, Allan M. Schiffman, "/>
@@ -95,7 +95,7 @@
 <p xml:lang="en" class="t-l-en">
           This memo describes a syntax for embedding S-HTTP negotiation
           parameters in HTML documents.  S-HTTP, as described by 
-          <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2660" title="RFC 2660">RFC 2660</a>, contains the concept of 
+          <a href="/uri-res/N2L?urn:ietf:rfc:2660" title="RFC 2660">RFC 2660</a>, contains the concept of 
           negotiation headers which reflect the potential receiver of 
           a message's preferences as to which cryptographic enhancements 
           should be applied to the message. This document describes a 
@@ -104,7 +104,7 @@
 <p xml:lang="ja" class="t-l-ja">
           このメモは、 HTML 文書中に S-HTTP 
           折衝パラメーターを埋め込む構文を説明します。 
-          <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2660" title="RFC 2660">RFC 2660</a> で説明されている
+          <a href="/uri-res/N2L?urn:ietf:rfc:2660" title="RFC 2660">RFC 2660</a> で説明されている
           S-HTTP は、どの暗号拡張をメッセージに適用するかの、メッセージの潜在受信者の好みを反映する折衝頭の概念を含んでいます。この文書はこれらの折衝パラメーターを
           HTML 錨に縛り付ける構文を説明します。
         </p>
@@ -152,7 +152,7 @@
         This need not be specified, but failure to do so runs the risk
         that the client will be unable to determine the DN and therefore
         will be unable to encrypt.  This should be specified in the form
-        of <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1485" title="RFC 1485">RFC1485</a>, 
+        of <a href="/uri-res/N2L?urn:ietf:rfc:1485" title="RFC 1485">RFC1485</a>, 
         using SGML quoting conventions as needed.
       </p>
 <p xml:lang="ja" class="t-l-ja">
@@ -160,7 +160,7 @@
         を解参照 (dereference) する時に要求が暗号化するべき対象者の識別された名前。
         これは指定する必要はありませんが、クライアントが DN
         を決定出来ず、ひいては暗号化も出来なくなる危険を冒すことになります。
-        <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1485" title="RFC 1485">RFC 1485</a> 
+        <a href="/uri-res/N2L?urn:ietf:rfc:1485" title="RFC 1485">RFC 1485</a> 
         の形式で、必要に応じて SGML
          quote 法を使って、指定するべきです。
       </p>
@@ -386,7 +386,7 @@ Don't read this. &lt;/A&gt;
   <dt id="SHTTP">[SHTTP]</dt>
 <dd>『<cite>The Secure HyperText Transfer Protocol</cite>』<span class="t-pair">
 <span xml:lang="ja" class="t-l-ja">, 『<cite>安全超文転送プロトコル</cite>』</span>
-</span>, Rescorla, E., Schiffman, A., <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2660" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2660>">RFC 2660</a>。</dd>
+</span>, Rescorla, E., Schiffman, A., <a href="/uri-res/N2L?urn:ietf:rfc:2660" title="URI: &lt;http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2660>">RFC 2660</a>。</dd>
 </dl>
 </div>
 <div id="rfc-copyright" class="rfc-section">
@@ -518,7 +518,7 @@ Don't read this. &lt;/A&gt;
 <dd>
 <ul>
 <li>
-<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
+<a href="/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
 </ul>
 </dd>
 </dl>
