--- a/rfc3232-ja.html
+++ b/rfc3232-ja.html
@@ -7,8 +7,8 @@
       RFC 3232: 
     割当番号: RFC 1700 はオンラインデータベースで置き換えられます (Assigned Numbers: RFC 1700 is Replaced by an On-line Database)
     </title>
-<link rel="stylesheet" href="http://suika.fam.cx/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
-<link rel="alternate" href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:3232" hreflang="en" title="RFC 3232"/>
+<link rel="stylesheet" href="/~wakaba/lang/rfc/translation/rfc-ja-style.css" type="text/css"/>
+<link rel="alternate" href="/uri-res/N2L?urn:ietf:rfc:3232" hreflang="en" title="RFC 3232"/>
 <link rev="made" href="http://www.rfceditor.org/" title="RFC Editor"/>
 <link rev="translate" href="#rfc-translators-note"/>
 <meta name="author" content="Joyce K. Reynolds, "/>
@@ -18,7 +18,7 @@
 <ul id="rfc--table-left">
 <li>Network Working Group</li>
 <li>Request for Comments: 3232</li>
-<li>廃止: <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">1700</a>
+<li>廃止: <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">1700</a>
 </li>
 <li>
 <span class="t-pair">
@@ -92,16 +92,16 @@
       <div class="rfc-t">
         <div class="t-pair">
 <p xml:lang="en" class="t-l-en">
-          This memo obsoletes <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> 
-          (<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a>) “Assigned Numbers”, 
+          This memo obsoletes <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> 
+          (<a href="/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a>) “Assigned Numbers”, 
           which contained an October 1994 snapshot of assigned 
           Internet protocol parameters.
         </p>
 <p xml:lang="ja" class="t-l-ja">
           このメモは、 1994年10月の割当済み Internet 
           プロトコルパラメーターのスナップ写真, 
-          <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> 
-          (<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a>)
+          <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> 
+          (<a href="/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a>)
           『割当番号』を廃止します。
         </p>
 </div>
@@ -121,19 +121,19 @@
      tables of the Internet protocol parameter assignments in RFCs 
      entitled, “Assigned Numbers”.  The most current of these 
      Assigned Numbers RFCs had Standard status and carried the 
-     designation: <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a>.  At this time,
-     the latest <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a> is 
-     <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a>.
+     designation: <a href="/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a>.  At this time,
+     the latest <a href="/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a> is 
+     <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a>.
    </p>
 <p xml:lang="ja" class="t-l-ja">
      1977年11月から1994年10月まで、<a href="http://www.iana.org/" title="URI: &lt;http://www.iana.org/>" class="rfc-eref"> Internet 割当番号事務局
      (IANA)</a> は定期的に Internet 
      プロトコルパラメーターの表を『割当番号』と名づけた
      RFC で発行して来ました。現在まで割当番号 RFC 
-     は標準の位置付けで、 <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a> 
+     は標準の位置付けで、 <a href="/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a> 
      という番号を当てられていました。現時点で最新の
-     <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a> は 
-     <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> です。
+     <a href="/uri-res/N2L?urn:ietf:std:2" title="STD 2">STD 2</a> は 
+     <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> です。
    </p>
 </div>
  </div>
@@ -145,9 +145,9 @@
      online database accessible through a web page (currently, 
      <a href="http://www.iana.org/" title="URI: &lt;http://www.iana.org/>" class="rfc-eref">www.iana.org</a>).
      The purpose of the present RFC is to note this fact and to 
-     officially obsolete <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a>, 
+     officially obsolete <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a>, 
      whose status changes to Historic.  
-     <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> is obsolete, and its 
+     <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> is obsolete, and its 
      values are incomplete and in some cases may be wrong.
    </p>
 <p xml:lang="ja" class="t-l-ja">
@@ -155,9 +155,9 @@
      (現在、 <a href="http://www.iana.org/" title="URI: &lt;http://www.iana.org/>" class="rfc-eref">www.iana.org</a>) 
      で接続可能なオンラインデータベースで置き換えられています。
      この RFC の目的はこの事実を覚書し、公式に 
-     <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> 
+     <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> 
      を廃止し、その位置付けを歴史的とすることです。 
-     <a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> 
+     <a href="/uri-res/N2L?urn:ietf:rfc:1700" title="RFC 1700">RFC 1700</a> 
      は時代遅れで、その値は不完全で場合によっては間違っています。
    </p>
 </div>
@@ -336,7 +336,7 @@
 <dd>
 <ul>
 <li>
-<a href="http://suika.fam.cx/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
+<a href="/uri-res/N2L?urn:ietf:rfc:2629" title="RFC 2629">RFC 2629</a> でマーク付け。</li>
 </ul>
 </dd>
 </dl>
