--- a/description.ja.html
+++ b/description.ja.html
@@ -7,19 +7,19 @@ href=introduction title="RFC の日本語訳のごあんない">詳細</a>)
 <p>各翻訳文は、 RFC のための XML マーク付け言語である <a
 href="http://tools.ietf.org/html/rfc2629">RFC 2629</a> (<a
 href="rfc2629-ja" title="RFC 2629 日本語訳">日本語訳</a>) を<a
-href="http://suika.fam.cx/www/markup/rfc/">翻訳のために拡張したマーク付け言語</a>によって記述されています。
+href="https://suika.suikawiki.org/www/markup/rfc/">翻訳のために拡張したマーク付け言語</a>によって記述されています。
 
 <h2>Git リポジトリー</h2>
 
 <p>このディレクトリーの文書は Git リポジトリー 
-(<a href="http://suika.fam.cx/gate/git/wi/net/rfc-ja-translations.git/tree">Suika</a> / <a href="https://github.com/wakaba/rfc-ja-translations">GitHub</a>)
+(<a href="https://suika.suikawiki.org/gate/git/wi/net/rfc-ja-translations.git/tree">Suika</a> / <a href="https://github.com/wakaba/rfc-ja-translations">GitHub</a>)
 で管理しています。
 
 <h2>関連</h2>
 
 <ul>
-  <li><a href="http://suika.fam.cx/~wakaba/wiki/sw/n/RFC%E3%83%9E%E3%83%BC%E3%82%AF%E4%BB%98%E3%81%91%E8%A8%80%E8%AA%9E">SuikaWiki:RFC マーク付け言語</a>
-  <li><a href="http://suika.fam.cx/www/markup/rfc/">RFC 2629 とその拡張のスキーマ</a>
+  <li><a href="https://suika.suikawiki.org/~wakaba/wiki/sw/n/RFC%E3%83%9E%E3%83%BC%E3%82%AF%E4%BB%98%E3%81%91%E8%A8%80%E8%AA%9E">SuikaWiki:RFC マーク付け言語</a>
+  <li><a href="https://suika.suikawiki.org/www/markup/rfc/">RFC 2629 とその拡張のスキーマ</a>
 </ul>
 
 <footer lang=ja>
